# adv-cpp-hs16

./: .gitignore  CMakeLists.txt  main.cpp
10.1_EnableIf_distance/: main.cc
10.1_EnableIf_distance/enable_if/: main.cc  makefile
3.2_spell_checker/: spellChecker.cc  spellChecker.h
3.4_connect4/: PlayerFactory.cpp  computerPlayer.cpp  computerPlayer.h  connect4Utils.cpp  connect4game.cpp  connect4game.h  humanPlayer.cpp  humanPlayer.h  player.cpp  player.h  player_nico.cc  player_nico.h  player_tim.cpp  player_tim.hpp  playfield.cpp  playfield.h  threadAI.cpp  threadAI.h
4.1_find_if/: find_if_Benchmark.cpp  find_if_Benchmark.h
4.1_find_if/findIf/src/ch/advcpp/: EqualsMatcher.java  Main.java  find_if_Benchmark.java
4.1_find_if/java/src/ch/advcpp/: Matcher.java  find_if_Benchmark.java
5.1_Emulating_pointers/: dumb_pointer.cpp  emulatingPointersRunner.cpp  emulatingPointersRunner.h  reference_counting.cpp  smart_pointer.cpp  tester.cpp
5.2_under_the_hood/: inline.cpp  normal.cpp
6.2_mem_fun/: demo.cpp  demo.h
6.4_RPN<complex>/: templateRPNcomplexRunner.h
6.4_RPN_complex/: templateRPNcomplex.h  templateRPNcomplexRunner.cpp
7.1_range_checking_iterator/: RangeCheckingIterator.cpp
7.2_Stack_and_Inheritance/: Stack.cpp
7.2_inheritance_stack/: Stack.cpp  UnlimitedStack.cpp
7.3_back_inserter/: BackInserterMerger.cpp
7.4_Locking_class/: FileLocker.cpp
8.2_regex_spell_checker/: regexSpellChecker.cc  regexSpellChecker.h
8.4_constructor_destructor/: ConstrDestrDemo.cpp  ConstrDestrDemo.h  child.cpp  child.h  parent.cpp  parent.h  test.cpp  test.h
9.1_single_manipulator/: Form2.cpp  Form2.h  manipulator.cpp  manipulator.h
9.2_custom_streambuf/: custom_streambuf.cpp
Exercise 4.3/: ex 4.3.txt
exercise1/: HelloWorld.cpp  HelloWorld.h
exercise2/: fraction.cpp  fraction.h  fractionTestDriver.cpp  fractionTestDriver.h  interactiveFraction.cpp  interactiveFraction.h
exercise2.2/: inlineFunction.h
exercise2.5/: pRNP.h  pRNPRunner.cpp  pRNPRunner.h  pvectorRNP.h
exercise3/: pvector.cpp  pvectorRunner.cpp
exercise3.1/: persistence_traits.cpp  pset.cpp  psetRunner.cpp  pvectorRunner_traits.cpp  pvector_traits.cpp
exercise3.3/: minForEachRPN.h  minForEachRPNRunner.cpp  minForEachRPNRunner.h
exercise4.1/: merger.h
exercise4.5/: somefunction_t.cpp
exercise5/: RPN.cpp  RPN.h  RPNRunner.cpp  RPNRunner.h
exercise6/: templateRNP.cpp  templateRNP.h  templateRPN.cpp  templateRPN.h  templateRPNRunner.cpp  templateRPNRunner.h
tests/: connect4tests.cpp  testRunner.cpp
utils/: inputUtils.cpp  inputUtils.h
workingDirectory/: content.txt  content.txt.corrected  dictionary.txt  junk.txt  regexes.txt
